# Change-Detection

./: README.md  config.py  eval.py  pyproject.toml  train.py
logs/: ef_unet_20260501_193935_train_log.csv  siamunet_conc_20260501_164016_train_log.csv  siamunet_diff_20260501_165737_train_log.csv
models/: __init__.py  fresunet.py  siamunet_conc.py  unet.py
utils/: __init__.py  dataset.py  losses.py  metrics.py
